--- a/start.html
+++ b/start.html
@@ -35,6 +35,8 @@
                 <input id="input-movil" type="checkbox">
                                 
                 <ul class="menu__list">
+                   <svg class="close-hamburger" width="20" viewBox="0 0 384 512"><path fill="#ffffff" d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
+                   
                     <li  class="menu__item"> 
                         <img class="menu__icon-boking" src="/Assets/iconos/Booking_service.svg" alt="">
                        <span class="menu__item-text">Booking Service</span> 
@@ -192,6 +194,12 @@
       });
     });
 
+    const hiddenMenu=document.querySelector('.close-hamburger')
+    const menuList=document.querySelector('.menu__list')
+    hiddenMenu.addEventListener('click',()=>{
+        console.log('clickkkk')
+        menuList.classList.add('active')
+    })
    </script>
 </body>
 </html>
