--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <form class="login__form" action="/start.html">  
         <img class="login__img" src="Assets/iconos-Logo/LOGO_NEWMONT-topaz-enhance-1.5x.png" alt="">
         <div class="login__content">
-             <label for="" class="login__label">Usuario</label>
+             <label for="" class="login__labelI">Usuario</label>
              <img class="login__icon" src="/Assets/iconos/Usuario_login.svg" alt="">
-             <input id="user" class="login__input" type="text" placeholder="Ingresa tu nombre de usuario">
+             <input id="user" class="login__input-u" type="text" placeholder="Ingresa tu nombre de usuario">
         </div>
         <div class="login__content">
-            <label for="" class="login__label">Contraseña  
+            <label for="" class="login__labelI">Contraseña  
             </label>
             <img class="login__icon" src="/Assets/iconos/Contraseña_login.svg" alt="">
             <input id="password" class="login__input" type="password" placeholder="Ingresar Contraseña" >
