--- a/tags.html
+++ b/tags.html
@@ -3,90 +3,153 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Custom Combo Box with Table</title>
     <style>
-        .tabs {
-  width: 100%;
-  border-radius: 8px;
-  background-color: #f8f9fa;
-  padding: 20px;
-}
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
 
-.tab-buttons {
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid #ccc;
-  margin-bottom: 20px;
-}
+        table, th, td {
+            border: 1px solid #ccc;
+            text-align: left;
+            padding: 8px;
+        }
 
-.tab-button {
-  background: none;
-  border: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  cursor: pointer;
-  position: relative;
-  transition: color 0.3s ease;
-}
+        th {
+            background-color: #f2f2f2;
+        }
 
-.tab-button.active {
-  color: #007bff;
-}
+        /* Estilos para el combobox personalizado */
+        .select-menu {
+            position: relative;
+            width: 200px;
+            margin-bottom: 20px;
+        }
 
-.tab-button.active::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  height: 2px;
-  width: 100%;
-  background-color: #007bff;
-  border-radius: 2px;
-}
+        .select {
+            background-color: #f2f2f2;
+            padding: 10px;
+            cursor: pointer;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
 
-.tab-content {
-  padding: 20px;
-  background-color: white;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  min-height: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+        .options-list {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            width: 100%;
+            border: 1px solid #ccc;
+            background-color: white;
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.3s ease;
+        }
 
-.tab-panel {
-  display: none;
-}
+        .options-list.active {
+            max-height: 150px; /* Ajustar la altura máxima cuando está desplegada */
+            overflow-y: auto;
+        }
 
-.tab-panel.active {
-  display: block;
-}
+        .option {
+            padding: 10px;
+            cursor: pointer;
+        }
 
-.tab-panel p {
-  color: #999;
-  font-size: 18px;
-}
+        .option:hover {
+            background-color: #f0f0f0;
+        }
 
     </style>
 </head>
 <body>
-   
-      <script>
-        document.querySelectorAll('.tab-button').forEach(button => {
-  button.addEventListener('click', () => {
-    const tab = button.dataset.tab;
 
-    // Cambiar la pestaña activa
-    document.querySelectorAll('.tab-button').forEach(btn => btn.classList.remove('active'));
-    button.classList.add('active');
+<div class="select-menu">
+    <div class="select">
+        <span>Elija una Empresa</span>
+        <i class="fas fa-angle-down"></i>
+    </div>
+    <div class="options-list">
+        <!-- Opciones dinámicas -->
+    </div>
+</div>
 
-    // Cambiar el contenido mostrado
-    document.querySelectorAll('.tab-panel').forEach(panel => panel.classList.remove('active'));
-    document.getElementById(tab).classList.add('active');
-  });
-});
+<table id="dataTable">
+    <thead>
+        <tr>
+            <th>Empresa</th>
+            <th>Fecha</th>
+            <th>Nro. de Personas</th>
+        </tr>
+    </thead>
+    <tbody>
+        <!-- Dynamic rows will be added here -->
+    </tbody>
+</table>
 
-      </script>
+<script>
+    // Simulate data from the database (data dynamic)
+    const data = [
+        { empresa: "CONTRATISTA", fecha: "01/08/2024", numeroPersonas: 238 },
+        { empresa: "NEWMONT", fecha: "01/08/2024", numeroPersonas: 238 },
+        { empresa: "TESLA", fecha: "01/09/2024", numeroPersonas: 150 },
+        { empresa: "APPLE", fecha: "01/10/2024", numeroPersonas: 320 }
+    ];
+
+    const selectMenu = document.querySelector('.select-menu');
+    const select = document.querySelector('.select');
+    const optionsList = document.querySelector('.options-list');
+    const dataTable = document.getElementById('dataTable').getElementsByTagName('tbody')[0];
+    const selectedSpan = document.querySelector('.select span');
+
+    // Function to populate the custom combobox with options dynamically
+    function populateComboBox() {
+        data.forEach((item, index) => {
+            const optionDiv = document.createElement('div');
+            optionDiv.classList.add('option');
+            optionDiv.textContent = item.empresa; // Populate with company name
+            optionDiv.setAttribute('data-index', index); // Store the index as a data attribute
+
+            // Add event listener to select the option
+            optionDiv.addEventListener('click', function() {
+                selectedSpan.textContent = item.empresa; // Update the selected option text
+                optionsList.classList.remove('active'); // Close the dropdown
+                populateTable(index); // Populate table with the selected company data
+            });
+
+            optionsList.appendChild(optionDiv); // Append option to the list
+        });
+    }
+
+    // Function to toggle the dropdown menu
+    select.addEventListener('click', function() {
+        optionsList.classList.toggle('active');
+    });
+
+    // Function to populate the table based on selected company
+    function populateTable(selectedIndex) {
+        dataTable.innerHTML = ''; // Clear existing rows
+        const selectedItem = data[selectedIndex];
+
+        const row = dataTable.insertRow(); // Create a new row
+
+        const cellEmpresa = row.insertCell(0);
+        const cellFecha = row.insertCell(1);
+        const cellPersonas = row.insertCell(2);
+
+        cellEmpresa.textContent = selectedItem.empresa;
+        cellFecha.textContent = selectedItem.fecha;
+        cellPersonas.textContent = selectedItem.numeroPersonas;
+    }
+
+    // Initial population of the custom combobox
+    populateComboBox();
+</script>
+
 </body>
 </html>
