--- a/dashboard.html
+++ b/dashboard.html
@@ -111,11 +111,19 @@
         </div>
 
         <div class="menu__profile">
-            <img  class="menu__profile-img" src="/Assets/profile/prueba.jpg" alt="">
-          
-          <span class="menu__item-text">
-            Administrador del sistema 
-          </span>  
+          <div class="menu__profile-content">
+            <img class="menu__profile-img" src="/Assets/profile/prueba.jpg" alt="">
+  
+            <span class="menu__item-text menu__item-text--wrap">
+              Administrador del sistema
+            </span>
+          </div>
+          <label for="" class="menu__profile-label"> 
+            <svg class="menu__profile-logout" width="26" height="17" viewBox="0 0 22 17" fill="none" >
+              <path d="M3.30883 7.67802L10.6577 7.67802C11.1937 7.67802 11.6267 8.08313 11.6267 8.58456C11.6267 9.08598 11.1937 9.49109 10.6577 9.49109L3.30883 9.49109L5.53137 11.5705C5.90987 11.9246 5.90987 12.4996 5.53137 12.8538C5.15287 13.2079 4.53819 13.2079 4.15969 12.8538L0.283873 9.22763C-0.0946249 8.87351 -0.0946249 8.29843 0.283873 7.94432L4.15969 4.31819C4.53819 3.96407 5.15287 3.96407 5.53137 4.31819C5.90987 4.6723 5.90987 5.24738 5.53137 5.6015L3.30883 7.67802ZM10.6577 15.1869L10.6577 10.3976C11.7266 10.3976 12.5957 9.58458 12.5957 8.58456C12.5957 7.58454 11.7266 6.77149 10.6577 6.77149L10.6577 1.81307C10.6577 0.813046 11.5268 8.75043e-07 12.5957 8.28321e-07L20.0621 5.01953e-07C21.131 4.55231e-07 22 0.813045 22 1.81306L22 15.1869C22 16.187 21.131 17 20.0621 17L12.5957 17C11.5268 17 10.6577 16.1869 10.6577 15.1869Z" fill="white"/>
+              </svg>
+              
+            <span class="menu__item-text menu__item-text--pd">Cerrar Sesión</span></label>
         </div>
      </div>
      <div class="content">
