--- a/start.html
+++ b/start.html
@@ -168,80 +168,336 @@
             Actions
           </div>
         </div>
-        <table id="myTable" class="display">
+        <!-- <table id="myTable" class="display">
           <thead>
             <tr>
               <th>Column 1</th>
               <th>Column 2</th>
+              <th>Column 2</th>
+              <th>Column 2</th>
+              <th>Column 2</th>
+              <th>Column 2</th>
+              <th>Column 2</th>
+              <th>Column 1</th>
+              <th>Column 2</th>
+              <th>Column 2</th>
+              <th>Column 2</th>
+              <th>Column 2</th>
+              <th>Column 2</th>
+              <th>Column 2</th>
+              <th>Column 2</th>
+              <th>Column 2</th>
+              <th>Column 17</th>
+         
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>Row 1 Data 1</td>
               <td>Row 1 Data 2</td>
-            </tr>
-            <tr>
-              <td>Row 2 Data 1</td>
-              <td>Row 2 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
             </tr>
             <tr>
               <td>Row 1 Data 1</td>
               <td>Row 1 Data 2</td>
-            </tr>
-            <tr>
-              <td>Row 2 Data 1</td>
-              <td>Row 2 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
             </tr>
             <tr>
               <td>Row 1 Data 1</td>
               <td>Row 1 Data 2</td>
-            </tr>
-            <tr>
-              <td>Row 2 Data 1</td>
-              <td>Row 2 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
             </tr>
             <tr>
               <td>Row 1 Data 1</td>
               <td>Row 1 Data 2</td>
-            </tr>
-            <tr>
-              <td>Row 2 Data 1</td>
-              <td>Row 2 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
             </tr>
             <tr>
               <td>Row 1 Data 1</td>
               <td>Row 1 Data 2</td>
-            </tr>
-            <tr>
-              <td>Row 2 Data 1</td>
-              <td>Row 2 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
             </tr>
             <tr>
               <td>Row 1 Data 1</td>
               <td>Row 1 Data 2</td>
-            </tr>
-            <tr>
-              <td>Row 2 Data 1</td>
-              <td>Row 2 Data 2</td>
-            </tr>
-            <tr>
-              <td>Alo</td>
               <td>Row 1 Data 2</td>
-            </tr>
-            <tr>
-              <td>Row 2 Data 1</td>
-              <td>Row 2 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
             </tr>
             <tr>
               <td>Row 1 Data 1</td>
               <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
             </tr>
             <tr>
-              <td>Row 2 Data 1</td>
-              <td>Row 2 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+            </tr>
+            <tr>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+            </tr>
+            <tr>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+            </tr>
+            <tr>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+            </tr>
+            <tr>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+            </tr>
+            <tr>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+            </tr>
+            <tr>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+            </tr>
+            <tr>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+            </tr>
+            <tr>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 1</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
+              <td>Row 1 Data 2</td>
             </tr>
           </tbody>
-        </table>
+        </table> -->
       </div>
     </div>
 
@@ -700,13 +956,6 @@
         searching: false // Deshabilita el filtro
       });
     });
-
-
-
-
-
-
-
 
   </script>
 </body>
