--- a/registro.html
+++ b/registro.html
@@ -15,7 +15,18 @@
   <script type="module" src="date.js"></script>
   <script src="menu.js" defer></script>
 </head>
+<style>
+  
+  .menu{
+    height: 100vh;
+  }
+  .modalM{
+    overflow-y: scroll;
+    overflow-x: hidden;
+    
+  }
 
+</style>
 <body>
 
   <section class="menu">
