--- a/start.html
+++ b/start.html
@@ -84,11 +84,11 @@
                 </a>
 
               </li>
-              <li class="menu__sublist-item">
+              <li class="menu__sublist-item" id="Areas">
                 <img class="menu__icon-boking" src="/Assets/iconos/Áreas.svg" alt="">
                 Áreas
               </li>
-              <li class="menu__sublist-item">
+              <li class="menu__sublist-item" id="Regimenes">
                 <img class="menu__icon-boking" src="/Assets/iconos/Régimenes.svg" alt="">
                 Régimenes
               </li>
@@ -96,11 +96,11 @@
                 <img class="menu__icon-boking" src="/Assets/iconos/Campamentos.svg" alt="">
                 Campamentos
               </li>
-              <li class="menu__sublist-item">
+              <li class="menu__sublist-item"   id="Comedores">
                 <img class="menu__icon-boking" src="/Assets/iconos/Comedores.svg" alt="">
                 Comedores
               </li>
-              <li class="menu__sublist-item">
+              <li class="menu__sublist-item" id="Destinos">
                 <img class="menu__icon-boking" src="/Assets/iconos/Destinos.svg" alt="">
                 Destinos
               </li>
@@ -108,7 +108,7 @@
                 <img class="menu__icon-boking" src="/Assets/iconos/Usuarios.svg" alt="">
                 Usuarios
               </li>
-              <li class="menu__sublist-item">
+              <li class="menu__sublist-item" id="Traslado">
                 <img class="menu__icon-boking" src="/Assets/iconos/Origen _de_traslado.svg" alt="">
                 traslado
               </li>
