--- a/registro.html
+++ b/registro.html
@@ -91,11 +91,11 @@
                 </a>
 
               </li>
-              <li class="menu__sublist-item">
+              <li class="menu__sublist-item" id="Areas">
                 <img class="menu__icon-boking" src="/Assets/iconos/Áreas.svg" alt="">
                 Áreas
               </li>
-              <li class="menu__sublist-item">
+              <li class="menu__sublist-item" id="Regimenes">
                 <img class="menu__icon-boking" src="/Assets/iconos/Régimenes.svg" alt="">
                 Régimenes
               </li>
@@ -103,11 +103,11 @@
                 <img class="menu__icon-boking" src="/Assets/iconos/Campamentos.svg" alt="">
                 Campamentos
               </li>
-              <li class="menu__sublist-item">
+              <li class="menu__sublist-item"   id="Comedores">
                 <img class="menu__icon-boking" src="/Assets/iconos/Comedores.svg" alt="">
                 Comedores
               </li>
-              <li class="menu__sublist-item">
+              <li class="menu__sublist-item" id="Destinos">
                 <img class="menu__icon-boking" src="/Assets/iconos/Destinos.svg" alt="">
                 Destinos
               </li>
@@ -115,7 +115,7 @@
                 <img class="menu__icon-boking" src="/Assets/iconos/Usuarios.svg" alt="">
                 Usuarios
               </li>
-              <li class="menu__sublist-item">
+              <li class="menu__sublist-item" id="Traslado">
                 <img class="menu__icon-boking" src="/Assets/iconos/Origen _de_traslado.svg" alt="">
                 traslado
               </li>
@@ -130,6 +130,8 @@
 
 
       </div>
+
+
 
       <div class="menu__profile">
         <div class="menu__profile-content">
@@ -147,6 +149,8 @@
           <span class="menu__item-text menu__item-text--pd">Cerrar Sesión</span></label>
       </div>
     </div>
+
+    
     <div class="modalM">
       <div class="modal__contentM">
         <div class="modal__header">
