--- a/registro.html
+++ b/registro.html
@@ -84,12 +84,11 @@
 
             <input class="menu__sublist-input" id="subdrop" type="checkbox">
             <ul class="menu__sublist">
-              <li class="menu__sublist-item">
-                <a href="empresas.html" class="menu__sub-link">
+              <li class="menu__sublist-item" id="Empresas">
+            
                   <img class="menu__icon-boking" src="/Assets/iconos/Empresas.svg" alt="">
                   Empresas
-                </a>
-
+              
               </li>
               <li class="menu__sublist-item" id="Areas">
                 <img class="menu__icon-boking" src="/Assets/iconos/Áreas.svg" alt="">
